--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </header>
     <section class=bigImage>
-        <!--make image background in css-->
+        <img src="/assets/1.jpg" alt="">
     </section>
     <section class="portfolio">
         <div class="images">
